# AphelionWeb

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Host.bat  README.md
.github/workflows/: cmake.yml
Aphelion/: CMakeLists.txt
Aphelion/Src/Aphelion/Core/: CMakeLists.txt  Core.cpp  Core.h  Core.hpp  Engine.cpp  Engine.hpp  Helper.h  Helper.hpp  Log.cpp  Log.h  Log.hpp  System.h  System.hpp  Time.h  Time.hpp  Util.h
Aphelion/Src/Aphelion/Core/Event/: Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp  WindowEvent.h  WindowEvent.hpp
Aphelion/Src/Aphelion/Core/Input/: Input.cpp  Input.h  Input.hpp  KeyCodes.h  KeyCodes.hpp  MouseCodes.h  MouseCodes.hpp
Aphelion/Src/Aphelion/Core/Platform/Desktop/: DesktopEngine.cpp
Aphelion/Src/Aphelion/Core/Platform/Web/: WebEngine.cpp
Aphelion/Src/Aphelion/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.hpp
Aphelion/Src/Aphelion/Engine/Platform/Desktop/: DesktopEngine.cpp
Aphelion/Src/Aphelion/Engine/Platform/Web/: WebEngine.cpp
Aphelion/Src/Aphelion/ImGUI/: CMakeLists.txt  ImGUI.hpp  ImGUISystem.h  ImGUISystem.hpp
Aphelion/Src/Aphelion/ImGUI/Platform/Web/: WebImGUI.cpp  WebImGUI.h  WebImGUI.hpp
Aphelion/Src/Aphelion/ImGui/: CMakeLists.txt  ImGUISystem.h  ImGuiSystem.h
Aphelion/Src/Aphelion/ImGui/Platform/Desktop/: DesktopImGUI.cpp  DesktopImGUI.h  DesktopImGui.cpp  DesktopImGui.h  ImGuiBuild.h
Aphelion/Src/Aphelion/ImGui/Platform/Web/: WebImGUI.h  WebImGui.cpp  WebImGui.h
Aphelion/Src/Aphelion/Print/: CMakeLists.txt  Print.cpp
Aphelion/Src/Aphelion/Renderer/: CMakeLists.txt  Renderer.h  Renderer.hpp  Renderer.md
Aphelion/Src/Aphelion/Renderer/old/: GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Primitive.cpp  Primitive.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Aphelion/Src/Aphelion/Renderer/old/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Aphelion/Src/Aphelion/Renderer/old/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Aphelion/Src/Aphelion/Window/: CMakeLists.txt  Window.cpp  Window.h  Window.hpp
Aphelion/Src/Aphelion/Window/Event/: KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Aphelion/Src/Aphelion/Window/Input/: Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Aphelion/Src/Aphelion/Window/Platform/Desktop/: DesktopWindow.cpp  DesktopWindow.h
Aphelion/Src/Aphelion/Window/Platform/Web/: WebWindow.cpp  WebWindow.h  WebWindow.hpp
Aphelion/Src/Platform/Desktop/: DesktopEngine.cpp
Aphelion/Src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Aphelion/Src/Platform/Web/: WebEngine.cpp
Aphelion/Src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.h
Sandbox/TestGame/: CMakeLists.txt
Sandbox/TestGame/Src/: TestGame.cpp
Sandbox/WASMGraphic/: CMakeLists.txt
Sandbox/WASMGraphic/Src/: Entry.cpp  Util.cpp  Util.hpp
Script/: DevelopmentSetup.bat
